03.business-os/AICompanyManager/900.meta/r8z_v8d_custom_http_context_response_exposure_fix_20260503_075127/021_node_check_server.err
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/server/aicm-local-ui-api-server.mjs:2165
if (route === "
              ^

SyntaxError: Invalid or unexpected token
    at checkSyntax (node:internal/main/check_syntax:72:5)

Node.js v24.14.1
